--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,251 @@
 .App {
+  font-family: 'Rajdhani', sans-serif;
+  text-align: center;
+  background-color: #232741;
+}
+
+.overlay {
+  color: #fff;
+}
+
+p {
+  font-size: 16pt;
+}
+
+.display__time-left {
+  display: block;
+  font-weight: 100;
+  font-size: 4rem;
+  margin: 0;
+  color: white;
+  text-shadow:4px 4px 0 rgba(0,0,0,0.05);
+  background: rgba(0,0,0,0.1);
+  width: 250px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.timer {
+  /*display:flex;*/
+  position: absolute;
+  height: 50vh;
+  flex-direction:column;
+  top:5%;
+  left:31%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.timer__controls {
+  display: block;
+    margin: auto;
+}
+
+.timer__controls form {
+  /*flex:1;*/
   display: flex;
+}
+
+.timer__controls input {
+  flex:1;
+  border:0;
+  padding: 0.5rem;
+}
+
+.timer__button, .stop {
+  background:none;
+  border:0;
+  cursor: pointer;
+  color:white;
+  font-size: 1rem;
+  text-transform: uppercase;
+  background:rgba(0,0,0,0.1);
+  border-bottom:3px solid rgba(0,0,0,0.2);
+  border-right:1px solid rgba(0,0,0,0.2);
+  padding: 1rem;
+  font-family: 'Rajdhani', sans-serif;
+}
+
+.timer__button:hover, .stop:hover {
+  background:rgba(200,200,200,0.7);
+  outline:0;
+}
+
+.timer__button:focus, .stop:focus {
+  background:rgba(0,200,0,0.7);
+  outline:0;
+}
+
+.display {
+  display:flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.display__end-time, .thanks {
+  font-size: 2rem;
+  color:white;
+  text-align: center;
+  margin: auto;
+}
+
+.thanks {
+  line-height: 1rem;
+}
+
+@media screen and (max-width: 1250px) {
+  .timer {
+    top:10%;
+    left: 36%;
+}
+  .timer__button {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .timer {
+    top:10%;
+    left: 20%;
+}
+  .timer__button {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 736px) {
+  .timer {
+    top:10%;
+    left: 15%;
+}
+  .timer__button {
+    font-size: 1rem;
+  }
+}
+
+
+@media screen and (max-width: 655px) {
+  .timer {
+    top:10%;
+    left: 10%;
+}
+  .timer__button {
+    font-size: 1rem;
+  }
+}
+
+
+@media screen and (max-width: 598px) {
+  .timer {
+    top:10%;
+    left: 7%;
+}
+  .timer__button {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 553px) {
+  .timer {
+    top: 10%;
+    left: 7%;
+}
+  .timer__button {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 518px) {
+  .timer {
+    top: 10%;
+    left: 6%;
+  }
+  .timer__button {
+    font-size: 0.83rem;
+  }
+}
+
+@media screen and (max-width: 485px) {
+  .timer {
+    top: 10%;
+    left: 6%;
+  }
+  .timer__button {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (max-width: 445px) {
+  .timer {
+    top: 10%;
+    left: 6%;
+  }
+  .timer__button {
+    font-size: 0.6rem;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .timer {
+    top:10%;
+    left: 7%;
+  }
+  .timer__button {
+    font-size: 0.85rem;
+    padding: 0.1rem;
+  }
+
+  .timer__controls input {
+    padding: 0.4rem;
+    width:20%;
+}
+
+@media screen and (max-width: 377px) {
+  .timer {
+    top:10%;
+    left: 7%;
+  }
+  .timer__button {
+    font-size: 0.85rem;
+    padding: 0.1rem;
+  }
+  
+  .timer__controls input {
+    padding: 0.4rem;
+    width:20%;
+  }
+
+}
+  
+  
+  @media screen and (max-width: 350px) {
+  .timer {
+    top:10%;
+    left: 4%;
+  }
+  .timer__button {
+    font-size: 0.85rem;
+    padding: 0.1rem;
+  }
+  
+  .timer__controls input {
+    padding: 0.4rem;
+    width:20%;
+  }
+}
+  
+  
+  @media screen and (max-width: 377px) {
+  .timer {
+    top:10%;
+    left: 3%;
+  }
+  .timer__button {
+    font-size: 0.85rem;
+    padding: 0.1rem;
+  }
+  
+  .timer__controls input {
+    padding: 0.4rem;
+    width:20%;
+  }
+}
 }
