--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Rajdhani&display=swap');
 .App {
   font-family: 'Rajdhani', sans-serif;
   text-align: center;
@@ -12,10 +13,18 @@ p {
   font-size: 16pt;
 }
 
+/* ---- reset ---- */ 
+#big-box { 
+  /* position:absolute;  */
+  width: 100%;
+  height: 100%;
+  background-color: #232741;  
+  background-repeat: no-repeat; 
+}
 .display__time-left {
   display: block;
   font-weight: 100;
-  font-size: 4rem;
+  font-size: 5rem;
   margin: 0;
   color: white;
   text-shadow:4px 4px 0 rgba(0,0,0,0.05);
@@ -23,7 +32,7 @@ p {
   width: 250px;
   text-align: center;
 }
-
+  
 .timer {
   /*display:flex;*/
   position: absolute;
@@ -37,18 +46,14 @@ p {
   display: block;
     margin: auto;
 }
-
-.timer__controls form {
-  /*flex:1;*/
-  display: flex;
-}
-
+  
 .timer__controls input {
   flex:1;
   border:0;
+  width: 100%;
   padding: 0.5rem;
 }
-
+  
 .timer__button, .stop {
   background:none;
   border:0;
@@ -62,7 +67,7 @@ p {
   padding: 1rem;
   font-family: 'Rajdhani', sans-serif;
 }
-
+  
 .timer__button:hover, .stop:hover {
   background:rgba(200,200,200,0.7);
   outline:0;
@@ -72,8 +77,9 @@ p {
   background:rgba(0,200,0,0.7);
   outline:0;
 }
-
+  
 .display {
+  /*flex:1;*/
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -86,14 +92,10 @@ p {
   text-align: center;
   margin: auto;
 }
-
-.thanks {
-  line-height: 1rem;
-}
-
+  
 @media screen and (max-width: 1250px) {
   .timer {
-    top:10%;
+    top:20%;
     left: 36%;
 }
   .timer__button {
@@ -103,7 +105,7 @@ p {
 
 @media screen and (max-width: 1000px) {
   .timer {
-    top:10%;
+    top:20%;
     left: 20%;
 }
   .timer__button {
@@ -113,18 +115,18 @@ p {
 
 @media screen and (max-width: 736px) {
   .timer {
-    top:10%;
+    top:20%;
     left: 15%;
 }
   .timer__button {
     font-size: 1rem;
   }
 }
-
-
+  
+  
 @media screen and (max-width: 655px) {
   .timer {
-    top:10%;
+    top:20%;
     left: 10%;
 }
   .timer__button {
@@ -132,10 +134,10 @@ p {
   }
 }
 
-
+  
 @media screen and (max-width: 598px) {
   .timer {
-    top:10%;
+    top:20%;
     left: 7%;
 }
   .timer__button {
@@ -145,7 +147,7 @@ p {
 
 @media screen and (max-width: 553px) {
   .timer {
-    top: 10%;
+    top: 20%;
     left: 7%;
 }
   .timer__button {
@@ -155,19 +157,19 @@ p {
 
 @media screen and (max-width: 518px) {
   .timer {
-    top: 10%;
+    top: 20%;
     left: 6%;
-  }
+}
   .timer__button {
     font-size: 0.83rem;
   }
 }
-
+  
 @media screen and (max-width: 485px) {
   .timer {
-    top: 10%;
+    top: 20%;
     left: 6%;
-  }
+}
   .timer__button {
     font-size: 0.7rem;
   }
@@ -175,77 +177,58 @@ p {
 
 @media screen and (max-width: 445px) {
   .timer {
-    top: 10%;
-    left: 6%;
-  }
+    top: 20%;
+    left: 2.5%;
+}
   .timer__button {
-    font-size: 0.6rem;
+    font-size: 0.7rem;
   }
 }
 
 @media screen and (max-width: 420px) {
   .timer {
-    top:10%;
-    left: 7%;
+  top:20%;
+  left: 5%;
+}
+  .timer__button {
+    font-size: 0.85rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  }
+  
+  .timer__controls input {
+    padding: 0.4rem;
+    width:95%;
+  }
+}
+    
+@media screen and (max-width: 350px) {
+  .timer {
+    top:20%;
+    left: 9%;
   }
   .timer__button {
     font-size: 0.85rem;
     padding: 0.1rem;
   }
-
   .timer__controls input {
     padding: 0.4rem;
     width:20%;
+  }  
 }
-
+  
+  
 @media screen and (max-width: 377px) {
   .timer {
-    top:10%;
-    left: 7%;
+    top:20%;
+    left: 1%;
   }
   .timer__button {
     font-size: 0.85rem;
-    padding: 0.1rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   }
-  
+    
   .timer__controls input {
     padding: 0.4rem;
-    width:20%;
+    width:95%;
   }
-
-}
-  
-  
-  @media screen and (max-width: 350px) {
-  .timer {
-    top:10%;
-    left: 4%;
-  }
-  .timer__button {
-    font-size: 0.85rem;
-    padding: 0.1rem;
-  }
-  
-  .timer__controls input {
-    padding: 0.4rem;
-    width:20%;
-  }
-}
-  
-  
-  @media screen and (max-width: 377px) {
-  .timer {
-    top:10%;
-    left: 3%;
-  }
-  .timer__button {
-    font-size: 0.85rem;
-    padding: 0.1rem;
-  }
-  
-  .timer__controls input {
-    padding: 0.4rem;
-    width:20%;
-  }
-}
 }
