--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Rajdhani&display=swap');
 .App {
   font-family: 'Rajdhani', sans-serif;
   text-align: center;
+  /* overflow: hidden; */
+}
+
+body {
+  margin: 0;
   background-color: #232741;
+  overflow: hidden;
+
 }
 
 .overlay {
@@ -13,18 +19,10 @@ p {
   font-size: 16pt;
 }
 
-/* ---- reset ---- */ 
-#big-box { 
-  /* position:absolute;  */
-  width: 100%;
-  height: 100%;
-  background-color: #232741;  
-  background-repeat: no-repeat; 
-}
 .display__time-left {
   display: block;
   font-weight: 100;
-  font-size: 5rem;
+  font-size: 4rem;
   margin: 0;
   color: white;
   text-shadow:4px 4px 0 rgba(0,0,0,0.05);
@@ -32,7 +30,7 @@ p {
   width: 250px;
   text-align: center;
 }
-  
+
 .timer {
   /*display:flex;*/
   position: absolute;
@@ -46,14 +44,22 @@ p {
   display: block;
     margin: auto;
 }
-  
+
+.timer__controls > * {
+  /*flex:1;*/
+}
+
+.timer__controls form {
+  /*flex:1;*/
+  display: flex;
+}
+
 .timer__controls input {
   flex:1;
   border:0;
-  width: 100%;
   padding: 0.5rem;
 }
-  
+
 .timer__button, .stop {
   background:none;
   border:0;
@@ -67,7 +73,7 @@ p {
   padding: 1rem;
   font-family: 'Rajdhani', sans-serif;
 }
-  
+
 .timer__button:hover, .stop:hover {
   background:rgba(200,200,200,0.7);
   outline:0;
@@ -77,9 +83,8 @@ p {
   background:rgba(0,200,0,0.7);
   outline:0;
 }
-  
+
 .display {
-  /*flex:1;*/
   display:flex;
   flex-direction: column;
   align-items: center;
@@ -92,32 +97,36 @@ p {
   text-align: center;
   margin: auto;
 }
-  
+
+.thanks {
+  line-height: 1rem;
+}
+
 @media screen and (max-width: 1250px) {
   .timer {
     top:20%;
     left: 36%;
-}
+  }
   .timer__button {
     font-size: 1rem;
   }
 }
-
+  
 @media screen and (max-width: 1000px) {
   .timer {
     top:20%;
     left: 20%;
-}
+  }
   .timer__button {
     font-size: 1rem;
   }
 }
-
+  
 @media screen and (max-width: 736px) {
   .timer {
     top:20%;
     left: 15%;
-}
+  }
   .timer__button {
     font-size: 1rem;
   }
@@ -128,12 +137,12 @@ p {
   .timer {
     top:20%;
     left: 10%;
-}
+  }
   .timer__button {
     font-size: 1rem;
   }
 }
-
+  
   
 @media screen and (max-width: 598px) {
   .timer {
@@ -144,12 +153,12 @@ p {
     font-size: 1rem;
   }
 }
-
+  
 @media screen and (max-width: 553px) {
   .timer {
     top: 20%;
     left: 7%;
-}
+  }
   .timer__button {
     font-size: 0.9rem;
   }
@@ -159,7 +168,7 @@ p {
   .timer {
     top: 20%;
     left: 6%;
-}
+  }
   .timer__button {
     font-size: 0.83rem;
   }
@@ -169,32 +178,32 @@ p {
   .timer {
     top: 20%;
     left: 6%;
-}
+  }
   .timer__button {
     font-size: 0.7rem;
   }
 }
-
+  
 @media screen and (max-width: 445px) {
   .timer {
     top: 20%;
     left: 2.5%;
-}
+  }
   .timer__button {
-    font-size: 0.7rem;
+      font-size: 0.7rem;
   }
 }
-
+  
 @media screen and (max-width: 420px) {
   .timer {
-  top:20%;
-  left: 5%;
-}
+    top:20%;
+    left: 5%;
+  }
   .timer__button {
     font-size: 0.85rem;
     padding: 0.5rem 0.5rem 0.5rem 0.5rem;
   }
-  
+    
   .timer__controls input {
     padding: 0.4rem;
     width:95%;
@@ -210,10 +219,12 @@ p {
     font-size: 0.85rem;
     padding: 0.1rem;
   }
+    
   .timer__controls input {
     padding: 0.4rem;
     width:20%;
-  }  
+  }
+    
 }
   
   
