--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Rajdhani&display=swap');
+
 .App {
   font-family: 'Rajdhani', sans-serif;
   text-align: center;
